<resources>
    <string name="app_name">Cosmetics Shop</string>
    <string name="read">Read</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="client_order">My Orders</string>
    <string name="catalog">Catalog</string>
    <string name="exit">Exit</string>
    <string name="continue_without_account">Сontinue without account</string>

    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="cosmetic_shop">Cosmetics Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">  Add to cart  </string>
    <string name="price">Price</string>
    <string name="in_stock">In stock</string>
</resources>