<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDA6FA">


    <TextView
        android:id="@+id/clientInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="Information"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clientName"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientInformation" />

    <TextView
        android:id="@+id/clientSurname"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/surname"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientName" />

    <TextView
        android:id="@+id/clientPhone"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/phone"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientSurname" />

    <TextView
        android:id="@+id/clientEmail"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/email"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPhone" />

    <TextView
        android:id="@+id/clientCart"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="Cart:"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientEmail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/client_recycler_view"
        android:layout_width="334dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="60dp"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/clientPreviousOrdersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientCart" />

    <Button
        android:id="@+id/clientPurchaseBtn"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/button_background"
        android:clickable="false"
        android:text="Buy"
        android:textAllCaps="false"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_recycler_view" />

    <Button
        android:id="@+id/clientPreviousOrdersBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:clickable="false"
        android:text="@string/client_order"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clientExitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clientExitBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/button_background"
        android:clickable="false"
        android:text="Exit account"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/client_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:text="0"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_recycler_view" />


</androidx.constraintlayout.widget.ConstraintLayout>